Harden RX mutual TLS configuration